[project]
name = "project-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Lyubov Davletshina",email = "chernonosova.lyubov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
exclude = 'git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'